--- a/css/layout.css
+++ b/css/layout.css
@@ -3,9 +3,11 @@
     Class:  CIST 3900
     Desc:   The custom layout style sheet for my project webiste
 */
+
 body {
     margin: 0px auto;
     width: 100%;
+    min-width: 320px;
     font-family: Arial, Helvetica, sans-serif;
     background-color: #87ceeb;
 }
@@ -17,23 +19,29 @@ header {
     font-variant: small-caps;
     text-align: center;
     background-color: #ffa07a;
-    max-height: 196px;
-    min-width: 720px;
+    padding: 8px 0px;
+    max-height: 10vw;
+    min-height: 90px;
+    width: 100%;
 }
 header h1{
-    font-size: 4em;
+    font-size: calc(16px + 3vw);
     transform: translate(0%, -65%);
-    max-height: 180px;
+    max-height: 10vw;
     display: inline-block;
-    padding: 8px;
     width: 20%;
 }
+header img {
+    max-width: 180px;
+    width: 10vw;
+    min-width: 90px;
+}
 nav {
-    /* min-width: 680px; */
     background-color: #000000;
     color: #ffffff;
     text-align: center;
-    min-width: 720px;
+    width: 100%;
+    padding: 0px, 8px;
 }
 nav a {
     display: inline-block;
@@ -41,17 +49,16 @@ nav a {
     text-decoration: none;
     color: inherit;
     text-align: center;
-    width: 180px;
+    width: 90px;
     height: auto;
 }
-nav a:hover {
-    background-color: #f0f0f0;
+nav a:hover:not(.nav--current-page) {
+    background-color: #d0d0d0;
     color: #000000;
 }
-
 footer {
     text-align: center;
-    min-width: 720px;
+    width: 100%;
 }
 footer p {
     margin: 8px;
@@ -69,13 +76,14 @@ footer p {
 }
 .content {
     background-color: #ffffff;
-    min-width: 720px;
+    width: 100%;
     margin: auto;
 }
 .content--body {
     max-width: 1200px;
     margin: auto;
     text-align: center;
+    padding: 0px 8px;
 }
 .content--body a {
     text-decoration: underline;
@@ -84,12 +92,18 @@ footer p {
     display: inline-block;
 }
 .content--body--block--text {
-    width: 720px;
+    width: 60vw;
+    max-width: 720px;
     text-align: left;
 }
-.content--body--block img{
-    width: 360px;
-    margin:26px 32px 26px 0px;
+.content--body--block img:not(.contact--link-ico){
+    width: 30vw;
+    max-width: 360px;
+    min-width: 180px;
+    margin:26px;
     vertical-align: top;
 }
-
+.contact--link-ico {
+    vertical-align: middle;
+    width:24px;
+}
