--- a/css/layout.css
+++ b/css/layout.css
@@ -2,6 +2,7 @@
     Name:   Phil Hansen
     Class:  CIST 3900
     Desc:   The custom layout style sheet for my project webiste
+    Date:   14 Jan 2019
 */
 
 body {
